# gb-rom-forwarder

./: .gitignore  CMakeLists.txt  Makefile  build.sh  forwarder.go  go.mod  go.sum  main.go
include/: cartridge.h
scripts/: requirements.txt  rom_to_header.py
src/: cartridge.c  main.c
